@@ -6,6 +6,18 @@ if (Joose.is_NodeJS) {
     })
     
     
+    JooseX.Namespace.Depended.Resource.JooseClass.meta.extend({
+        
+        methods : {
+            
+            getUrls : function () {
+                return [ this.token.split('.').join('/') ]
+            }
+        }
+    })
+    
+    
+    
     JooseX.Namespace.Depended.Manager.my.disableCaching = false
     
     Joose.Namespace.Manager.my.containResources.unshift('require')
