@@ -4,6 +4,18 @@ JooseX.Namespace.Depended.Resource.JavaScript.meta.extend({
 })
 
 
+JooseX.Namespace.Depended.Resource.JooseClass.meta.extend({
+    
+    methods : {
+        
+        getUrls : function () {
+            return [ this.token.split('.').join('/') ]
+        }
+    }
+})
+
+
+
 JooseX.Namespace.Depended.Manager.my.disableCaching = false
 
 Joose.Namespace.Manager.my.containResources.unshift('require')
