@@ -1,6 +1,6 @@
 JooseX.Namespace.Depended.Resource.JavaScript.meta.extend({
     
-    does : [ JooseX.Namespace.Depended.Transport.XHRAsync, JooseX.Namespace.Depended.Materialize.ScriptTag ]
+    does : [ JooseX.Namespace.Depended.Transport.XHRAsync, JooseX.Namespace.Depended.Materialize.Eval ]
 })
 
 
