@@ -5,7 +5,7 @@ Role('JooseX.Namespace.Depended.Materialize.Eval', {
     methods : {
         
         materialize : function (resourceBlob) {
-            
+            // "indirect eval" call 
             (window.execScript || window.eval)(resourceBlob)
         }
     }
