@@ -6,21 +6,19 @@ Role('JooseX.Namespace.Depended.Materialize.NodeJS', {
         
         materialize : function (resourceBlob, url) {
             
-            
-            
             // global scope
             if (process.global == global)
             
-                process.compile(
-                    '(function (exports, require, module, __filename, __dirname) {' + resourceBlob + '})', 
-                    url
-                )(exports, require, module, __filename, __dirname)
+                process.binding('evals').runInThisContext(resourceBlob + '', url)
+            
+//                process.compile(
+//                    '(function (exports, require, module, __filename, __dirname) {' + resourceBlob + '})', 
+//                    url
+//                )(exports, require, module, __filename, __dirname)
                 
             else
                 // running in Test.Run
-                (function (){
-                    eval(resourceBlob + '')
-                })()
+                execScript(resourceBlob + '')
         }
     }
 })
