@@ -11,7 +11,7 @@ Class('JooseX.Namespace.Depended.Resource.JooseClass', {
             var me = this
             
             this.presence = function () {
-                var c = eval(me.token)
+                var c = Joose.S.strToClass(me.token)
                 
                 return c && c.meta.resource
             }
