@@ -5,6 +5,19 @@ Role('JooseX.Namespace.Depended.Transport.NodeJS', {
     override : {
         
         load: function (url, onsuccess, onerror) {
+            
+//            try {
+//                require(url)
+//                
+//            } catch (e) {
+//                
+//                onerror(e)
+//                
+//                return
+//            }
+//            
+//            onsuccess('', url)
+            
             var fs = require('fs')
             
             fs.readFile(url, function (err, data) {
@@ -17,6 +30,16 @@ Role('JooseX.Namespace.Depended.Transport.NodeJS', {
                 onsuccess(data, url)
             })            
         }
+//        ,
+        
+        
+//        getUrls : function () {
+//            return [ this.token ]
+//        },
+        
+        
+//        materialize : function () {
+//        }
     }
 })
 
