@@ -2,6 +2,8 @@ Release history for JooseX.Namespace.Depended
 
 {{ $NEXT }}
 
+    - "eval" materializer now evalutes the code in the global scope (indirect eval or `execScript` in IE)
+
 0.14      2010-12-14 20:48
 
     - bumped deps
